Bug 74849 - Regression in Xephyr 1.15: -screen option doesn't work if not launched within a window manager
Summary: Regression in Xephyr 1.15: -screen option doesn't work if not launched within...
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Server/DDX/Xephyr (show other bugs)
Version: git
Hardware: Other All
: medium normal
Assignee: Julien Cristau
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-11 17:17 UTC by Laércio de Sousa
Modified: 2014-03-28 08:59 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
restore initial window resize (963 bytes, patch)
2014-03-26 20:28 UTC, Julien Cristau
no flags Details | Splinter Review

Description Laércio de Sousa 2014-02-11 17:17:40 UTC
I have observed a strange regression when I've updated Xephyr from 1.14.3 to 1.15.0 in my openSUSE 13.1 setup.

If I start a Xephyr window within my desktop environment, everything goes OK. However, if I launch Xephyr directly from my display manager (typical case for single-card multiseat setups), -screen option is completely ignored and Xephyr window is always started with geometry 100x100+0+0.

Comparing 1.14.3 to current git codes, I've seen that ephyr/hostx.c has a XResizeWindow() call in hostx_init_screen() function in the previous version, but this call is gone after code migration to xcb, and it seems no equivalent is provided.
Comment 1 Julien Cristau 2014-03-26 20:28:24 UTC
Created attachment 96425 [details] [review]
restore initial window resize

Does the attached patch fix this?
Comment 2 Jon Turney 2014-03-26 21:46:56 UTC
(In reply to comment #1)
> Does the attached patch fix this?

I've just written an identical patch :-D

Tested-by & Reviewed-by:
Comment 3 Julien Cristau 2014-03-26 22:47:55 UTC
Thanks Jon, patch submitted at http://patchwork.freedesktop.org/patch/22975/


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.